--- a/book.tex
+++ b/book.tex
@@ -16,6 +16,7 @@
 \usepackage{etoolbox}  % for showidx
 \usepackage{fullpage}
 \usepackage{soul}
+\usepackage{longtable}
 
 \usepackage{hyperref}  % should be last
 
